Add favicon and adjust percentages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/css/tooltip.css">
 	<link rel="stylesheet" href="/css/circ-progress.css">
 
+	<link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
+	<link rel="icon" type="image/png" href="/img/favicon.png">
+
 	<title>My personal page</title>
 </head>
 
@@ -26,7 +29,7 @@
 				<p>Industrial engineer</p>
 			</div>
 		</div>
-		
+
 	</header>
 
 	<main class="cv-container">
@@ -35,7 +38,7 @@
 			<h1>Biography</h1>
 			<div>
 				I'm a <span class="tooltip">
-					<span id="age-counter">##</span>
+					<span id="age-counter">23</span>
 					<span id="age-tooltip" class="tooltip-text">
 						It seems like you don't have javascript enabled...
 					</span>
@@ -53,11 +56,11 @@
 			<div class="amount-bar-container">
 				<h3>Problem-solving</h3>
 				<div class="amount-bar">
-					<div style="width:80%"></div>
+					<div style="width:90%"></div>
 				</div>
 				<h3>Detail-oriented</h3>
 				<div class="amount-bar">
-					<div style="width:40%"></div>
+					<div style="width:50%"></div>
 				</div>
 				<h3>Quick learner</h3>
 				<div class="amount-bar">
@@ -70,7 +73,6 @@
 			</div>
 		</section>
 
-		<!-- TODO: Add education and experience -->
 		<section>
 			<h1>Experience</h1>
 			<ul class="exp-list">
@@ -153,74 +155,79 @@
 						<p>TISP - Mol</p>
 						<p>Sep 2011 - Jun 2017</p>
 					</H3>
+					<div>
+						<p>Final project: Inverse kinematics of a parallel delta robot</p>
+					</div>
 				</li>
 			</ul>
 		</section>
 
 		<!-- TODO: Adjust percentages -->
 		<section>
-			<h1>Programming languages</h1>
+			<h1>Coding Languages</h1>
 			<div class="amount-bar-container">
 				<h3>Python</h3>
 				<div class="amount-bar">
-					<div style="width:80%"></div>
+					<div style="width:85%"></div>
 				</div>
 
 				<h3>C</h3>
 				<div class="amount-bar">
-					<div style="width:70%"></div>
+					<div style="width:68%"></div>
 				</div>
 				<h3>C++</h3>
 				<div class="amount-bar">
-					<div style="width:70%"></div>
+					<div style="width:75%"></div>
 				</div>
 				<h3>Verilog</h3>
 				<div class="amount-bar">
-					<div style="width:60%"></div>
+					<div style="width:62%"></div>
 				</div>
 				<h3>MATLAB</h3>
 				<div class="amount-bar">
-					<div style="width:60%"></div>
+					<div style="width:46%"></div>
 				</div>
 				<h3>Javascript</h3>
 				<div class="amount-bar">
-					<div style="width:40%"></div>
+					<div style="width:65%"></div>
 				</div>
 				<h3>HTML & CSS</h3>
 				<div class="amount-bar">
-					<div style="width:60%"></div>
+					<div style="width:58%"></div>
 				</div>
 			</div>
 		</section>
 
 		<section>
-			<h1>Software</h1>
+			<h1>Software Experience</h1>
 			<div class="amount-bar-container">
-				<h3>Git Version Control</h3>
+				<h3>Git VCS</h3>
 				<div class="amount-bar">
-					<div style="width:80%"></div>
+					<div style="width:90%"></div>
 				</div>
-
 				<h3>Autodesk Inventor</h3>
-				<div class="amount-bar">
-					<div style="width:70%"></div>
-				</div>
-
-				<h3>LabVIEW</h3>
 				<div class="amount-bar">
 					<div style="width:70%"></div>
 				</div>
 				<h3>Xilinx Vivado</h3>
 				<div class="amount-bar">
-					<div style="width:60%"></div>
+					<div style="width:56%"></div>
 				</div>
-				<h3>Multisim & Ultiboard</h3>
+				<h3>LabVIEW</h3>
 				<div class="amount-bar">
-					<div style="width:60%"></div>
+					<div style="width:65%"></div>
 				</div>
+				<h3>Multisim</h3>
+				<div class="amount-bar">
+					<div style="width:54%"></div>
+				</div>
+				<h3>Ultiboard</h3>
+				<div class="amount-bar">
+					<div style="width:50%"></div>
+				</div>			
 				<h3>Microsoft Office</h3>
 				<div class="amount-bar">
-					<div style="width:40%"></div>
+					<div style="width:70%"></div>
 				</div>
 			</div>
 		</section>
@@ -284,6 +291,7 @@
 			<h1>Miscellaneous skills</h1>
 			<ul class="misc-skills">
 				<li>I have a driver's license (type B)</li>
+				<li>I have experience with 3D printing</li>
 				<li>I can solve a Rubik's cube in under 5 minutes</li>
 				<li>I can juggle 4 balls</li>
 				<li>I can ride a unicycle</li>
