Update title and favicon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
 	<link rel="icon" type="image/png" href="/img/favicon.png">
 
-	<title>My personal page</title>
+	<title>Brecht Ooms - Resume</title>
 </head>
 
 <body>
@@ -224,7 +224,7 @@
 				<h3>Ultiboard</h3>
 				<div class="amount-bar">
 					<div style="width:50%"></div>
-				</div>			
+				</div>
 				<h3>Microsoft Office</h3>
 				<div class="amount-bar">
 					<div style="width:70%"></div>
