Add SQL to the coding languages

--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
 				<div class="amount-bar">
 					<div style="width:46%"></div>
 				</div>
+				<h3>SQL</h3>
+				<div class="amount-bar">
+					<div style="width:52%"></div>
+				</div>
 				<h3>Javascript</h3>
 				<div class="amount-bar">
 					<div style="width:65%"></div>
