--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 			<div>
 				I'm a <span class="tooltip">
 					<span id="age-counter">23</span>
-					<span id="age-tooltip" class="tooltip-text" >
-						It seems like you don't have javascript enabled...
+					<span id="age-tooltip">
 					</span>
 				</span>
 				year old developer from Mol who recently earned
