Add recent job and experience

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 				<p>Industrial engineer</p>
 			</div>
 		</div>
-
 	</header>
 
 	<main class="cv-container">
@@ -75,6 +74,13 @@
 		<section>
 			<h1>Experience</h1>
 			<ul class="exp-list">
+				<li>
+					<h2>Junior Java Developer</h2>
+					<H3 class="loc-date">
+						<p>Cegeka - Leuven</p>
+						<p>Aug 2022 - Present</p>
+					</H3>
+				</li>
 				<li>
 					<h2>Researcher & Teaching Assistant</h2>
 					<H3 class="loc-date">
@@ -168,6 +174,12 @@
 				<h3>Python</h3>
 				<div class="amount-bar">
 					<div style="width:85%"></div>
+				</div>
+
+				<h3>Java</h3>
+				<div class="amount-bar">
+					<!-- Haha, it's the funny number -->
+					<div style="width:69%"></div>
 				</div>
 
 				<h3>C</h3>
@@ -289,12 +301,21 @@
 				</div>
 			</div>
 		</section>
+		
+		<section>
+			<h1>Other software development skills</h1>
+			<ul class="misc-skills">
+				<li>Experience with Agile development</li>
+				<li>Experience with test driven development</li>
+				<li>Experience with structured refactoring</li>
+			</ul>
+		</section>
 
 		<section>
 			<h1>Miscellaneous skills</h1>
 			<ul class="misc-skills">
-				<li>I have a driver's license (type B)</li>
-				<li>I have experience with 3D printing</li>
+				<li>Driver's license (type B)</li>
+				<li>Experience with 3D printing</li>
 				<li>I can solve a Rubik's cube in under 5 minutes</li>
 				<li>I can juggle 4 balls</li>
 				<li>I can ride a unicycle</li>
