Add Scrum to the list of software skills

--- a/index.html
+++ b/index.html
@@ -36,17 +36,11 @@
 		<section>
 			<h1>Biography</h1>
 			<div>
-				I'm a <span class="tooltip">
-					<span id="age-counter">23</span>
-					<span id="age-tooltip">
-					</span>
-				</span>
-				year old developer from Mol who recently earned
-				his master's degree. I love all kinds of games, from strategic board
+				I'm a <span class="tooltip"><span id="age-counter">23</span><span id="age-tooltip"></span></span>
+				year old developer from Mol. I love all kinds of games, from strategic board
 				games to fast-paced competitive video games. I also put a lot of effort
 				into developing my circus skills like juggling and acrobatics.
 			</div>
-
 		</section>
 
 		<section>
@@ -301,11 +295,12 @@
 				</div>
 			</div>
 		</section>
-		
+
 		<section>
 			<h1>Other software development skills</h1>
 			<ul class="misc-skills">
-				<li>Experience with Agile development</li>
+				<li>Experience with Agile software development</li>
+				<li>Experience with Scrum</li>
 				<li>Experience with test driven development</li>
 				<li>Experience with structured refactoring</li>
 			</ul>
@@ -328,6 +323,10 @@
 				<p>***REMOVED***</p>
 				<p>brecht.ooms@hotmail.com</p>
 			</address>
+		</section>
+
+		<section>
+			<!-- Section to make it even ;) -->
 		</section>
 	</main>
 
