Improve layout, logo and css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
 <body>
 	<header class="hero-image">
 		<div class="hero-left">
-			<div class="logo-container"><img class="logo" src="/img/logo.svg" alt="My logo"></div>
+			<div class="logo-container">
+				<!-- <img class="logo" src="/img/logo.svg" alt="My logo"> -->
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60.89 60.89">
+					<defs>
+						<style>
+							.cls-1,
+							.cls-2 {
+								fill: #fff;
+							}
+
+							.cls-2 {
+								font-size: 20px;
+								font-family: RobotoMono-Medium, Roboto Mono;
+								font-weight: 500;
+							}
+						</style>
+					</defs>
+					<title>Asset 1fixed</title>
+					<g id="Layer_2" data-name="Layer 2">
+						<g id="_01_Header" data-name="01_Header">
+							<path class="cls-1"
+								d="M59.77,60.89H1.13A1.12,1.12,0,0,1,0,59.77V1.13A1.12,1.12,0,0,1,1.13,0H59.77a1.12,1.12,0,0,1,1.12,1.13V59.77A1.12,1.12,0,0,1,59.77,60.89ZM2.25,58.64H58.64V2.25H2.25Z" />
+							<path class="cls-1"
+								d="M12.22,50.16a1.13,1.13,0,0,1-.8-1.92L48.67,11a1.13,1.13,0,0,1,1.6,1.59L13,49.83A1.13,1.13,0,0,1,12.22,50.16Z" />
+							<text class="cls-2" transform="translate(9.19 24.08)">B</text><text class="cls-2"
+								transform="translate(40.27 52.58)">O</text>
+						</g>
+					</g>
+				</svg>
+			</div>
 
 
 			<div class="flex-column-spread">
@@ -325,7 +354,7 @@
 			</address>
 		</section>
 
-		<section>
+		<section id="last-section">
 			<!-- Section to make it even ;) -->
 		</section>
 	</main>
