--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<section>
 			<h1>Biography</h1>
 			<div>
-				I'm a <span class="tooltip"><span id="age-counter">23</span><span id="age-tooltip"></span></span>
+				I'm a <span class="tooltip"><span id="age-counter">24</span><span id="age-tooltip"></span></span>
 				year old developer from Mol. I love all kinds of games, from strategic board
 				games to fast-paced competitive video games. I also put a lot of effort
 				into developing my circus skills like juggling and acrobatics.
@@ -97,10 +97,17 @@
 			<h1>Experience</h1>
 			<ul class="exp-list">
 				<li>
+					<h2>Python Developer</h2>
+					<H3 class="loc-date">
+						<p>Intersoft Electronics - Olen</p>
+						<p>Dec 2022 - Present</p>
+					</H3>
+				</li>
+				<li>
 					<h2>Junior Java Developer</h2>
 					<H3 class="loc-date">
 						<p>Cegeka - Leuven</p>
-						<p>Aug 2022 - Present</p>
+						<p>Aug 2022 - Dec 2022</p>
 					</H3>
 				</li>
 				<li>
@@ -206,15 +213,15 @@
 
 				<h3>C</h3>
 				<div class="amount-bar">
-					<div style="width:68%"></div>
+					<div style="width:55%"></div>
 				</div>
 				<h3>C++</h3>
 				<div class="amount-bar">
-					<div style="width:75%"></div>
+					<div style="width:60%"></div>
 				</div>
 				<h3>Verilog</h3>
 				<div class="amount-bar">
-					<div style="width:62%"></div>
+					<div style="width:50%"></div>
 				</div>
 				<h3>MATLAB</h3>
 				<div class="amount-bar">
@@ -339,7 +346,7 @@
 			<ul class="misc-skills">
 				<li>Driver's license (type B)</li>
 				<li>Experience with 3D printing</li>
-				<li>I can solve a Rubik's cube in under 5 minutes</li>
+				<!-- <li>I can solve a Rubik's cube in under 5 minutes</li> -->
 				<li>I can juggle 4 balls</li>
 				<li>I can ride a unicycle</li>
 			</ul>
