--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 				<img class="logo" src="/img/logo.svg" alt="B/O">
 			</div>
 			<div class="flex-column-spread">
-				<h1>Brecht <br>
-					Ooms</h1>
-				<p>Industrial engineer</p>
+				<h1>
+					Brecht <br>
+					Ooms
+				</h1>
+				<p>Industrial Engineer</p>
 			</div>
 		</div>
 	</header>
@@ -34,8 +36,12 @@
 		<section>
 			<h1>Biography</h1>
 			<div>
-				I'm a <span class="tooltip"><span id="age-counter">24</span><span id="age-tooltip"></span></span>
-				year old developer from Mol. I love all kinds of games, from strategic board
+				I'm a
+				<span class="tooltip">
+					<span id="age-counter">25</span>
+					<span id="age-tooltip"></span>
+				</span>
+				year old software developer/engineer from Mol. I love all kinds of games, from strategic board
 				games to fast-paced competitive video games. I also put a lot of effort
 				into developing my circus skills like juggling and acrobatics.
 			</div>
@@ -54,11 +60,15 @@
 				</div>
 				<h3>Quick learner</h3>
 				<div class="amount-bar">
-					<div style="width:70%"></div>
+					<div style="width:80%"></div>
 				</div>
 				<h3>Leadership</h3>
 				<div class="amount-bar">
 					<div style="width:60%"></div>
+				</div>
+				<h3>Beauty-driven</h3>
+				<div class="amount-bar">
+					<div style="width:75%"></div>
 				</div>
 			</div>
 		</section>
@@ -93,10 +103,6 @@
 						<p>Speelplein Galbergen - Mol</p>
 						<p>Jul 2015 - present</p>
 					</H3>
-					<div>
-						<p>Preparing fun activities for children of various ages</p>
-						<p>Leading a team of animators in organizing the activities</p>
-					</div>
 				</li>
 				<li>
 					<h2>Student Job: Order Picker</h2>
@@ -105,11 +111,7 @@
 						<p>Aug 2017 - Dec 2018</p>
 					</H3>
 					<div>
-						<p>
-							Preparing orders accurately by processing requests,
-							pulled materials from warehouse, packing transport pallets, and
-							prepared shipments
-						</p>
+
 					</div>
 				</li>
 
@@ -119,11 +121,6 @@
 						<p>Ooms IJzerwaren - Balen</p>
 						<p>Jul 2014 - Aug 2016</p>
 					</H3>
-					<div>
-						<p>
-							Assisting with the maintenance and repair of electric handheld power tools
-						</p>
-					</div>
 				</li>
 			</ul>
 		</section>
@@ -175,6 +172,11 @@
 					<div style="width:85%"></div>
 				</div>
 
+				<h3>Rust</h3>
+				<div class="amount-bar">
+					<div style="width:40%"></div>
+				</div>
+
 				<h3>Java</h3>
 				<div class="amount-bar">
 					<!-- Haha, it's the funny number -->
@@ -184,18 +186,6 @@
 				<h3>C</h3>
 				<div class="amount-bar">
 					<div style="width:55%"></div>
-				</div>
-				<h3>C++</h3>
-				<div class="amount-bar">
-					<div style="width:60%"></div>
-				</div>
-				<h3>Verilog</h3>
-				<div class="amount-bar">
-					<div style="width:50%"></div>
-				</div>
-				<h3>MATLAB</h3>
-				<div class="amount-bar">
-					<div style="width:46%"></div>
 				</div>
 				<h3>SQL</h3>
 				<div class="amount-bar">
@@ -217,31 +207,15 @@
 			<div class="amount-bar-container">
 				<h3>Git VCS</h3>
 				<div class="amount-bar">
-					<div style="width:90%"></div>
+					<div style="width:85%"></div>
 				</div>
-				<h3>Autodesk Inventor</h3>
+				<h3>JetBrains suite</h3>
 				<div class="amount-bar">
-					<div style="width:70%"></div>
-				</div>
-				<h3>Xilinx Vivado</h3>
-				<div class="amount-bar">
-					<div style="width:56%"></div>
-				</div>
-				<h3>LabVIEW</h3>
-				<div class="amount-bar">
-					<div style="width:65%"></div>
-				</div>
-				<h3>Multisim</h3>
-				<div class="amount-bar">
-					<div style="width:54%"></div>
-				</div>
-				<h3>Ultiboard</h3>
-				<div class="amount-bar">
-					<div style="width:50%"></div>
+					<div style="width:75%"></div>
 				</div>
 				<h3>Microsoft Office</h3>
 				<div class="amount-bar">
-					<div style="width:70%"></div>
+					<div style="width:65%"></div>
 				</div>
 			</div>
 		</section>
@@ -258,7 +232,7 @@
 				<div class="circ-progress" style="--value:80;">
 					<div class="value-container">
 						<p>English</p>
-						<p>80%</p>
+						<p>85%</p>
 					</div>
 				</div>
 				<div class="circ-progress" style="--value:30;">
@@ -306,8 +280,11 @@
 			<ul class="misc-skills">
 				<li>Experience with Agile software development</li>
 				<li>Experience with Scrum</li>
+				<li>Experience with UML</li>
 				<li>Experience with test driven development</li>
 				<li>Experience with structured refactoring</li>
+				<li>Experience with OOP</li>
+				<li>Currently learning a lot about functional programming</li>
 			</ul>
 		</section>
 
@@ -317,7 +294,7 @@
 				<li>Driver's license (type B)</li>
 				<li>Experience with 3D printing</li>
 				<!-- <li>I can solve a Rubik's cube in under 5 minutes</li> -->
-				<li>I can juggle 4 balls</li>
+				<li>I can juggle 5 balls</li>
 				<li>I can ride a unicycle</li>
 			</ul>
 		</section>
@@ -337,7 +314,7 @@
 
 
 	<footer>
-		<p>Copyright &copy; <span id="copyright-year">2022</span>, Brecht Ooms</p>
+		<p>Copyright &copy; <span id="copyright-year">2022</span>, Ing. Brecht Ooms</p>
 	</footer>
 
 	<script src="/js/age-counter.js"></script>
