--- a/index.html
+++ b/index.html
@@ -78,38 +78,38 @@
 			<ul class="exp-list">
 				<li>
 					<h2>Python Developer</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>Intersoft Electronics - Olen</p>
 						<p>Dec 2022 - Present</p>
-					</H3>
+					</h3>
 				</li>
 				<li>
 					<h2>Junior Java Developer</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>Cegeka - Leuven</p>
 						<p>Aug 2022 - Dec 2022</p>
-					</H3>
+					</h3>
 				</li>
 				<li>
 					<h2>Researcher & Teaching Assistant</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>KU Leuven - Geel</p>
 						<p>Oct 2021 - Mar 2022</p>
-					</H3>
+					</h3>
 				</li>
 				<li>
 					<h2>Volunteer: Animator & Hoofdanimator</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>Speelplein Galbergen - Mol</p>
 						<p>Jul 2015 - present</p>
-					</H3>
+					</h3>
 				</li>
 				<li>
 					<h2>Student Job: Order Picker</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>Domus Logistics - Olen</p>
 						<p>Aug 2017 - Dec 2018</p>
-					</H3>
+					</h3>
 					<div>
 
 					</div>
@@ -117,10 +117,10 @@
 
 				<li>
 					<h2>Student Job: Assistant Repair Technician</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>Ooms IJzerwaren - Balen</p>
 						<p>Jul 2014 - Aug 2016</p>
-					</H3>
+					</h3>
 				</li>
 			</ul>
 		</section>
@@ -130,10 +130,10 @@
 			<ul class="exp-list">
 				<li>
 					<h2>Master of Science: Engineering Technology</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>KU Leuven - Geel</p>
 						<p>Sep 2020 - Jun 2021</p>
-					</H3>
+					</h3>
 					<div>
 						<p>Specialization: ICT engineering</p>
 						<p>Graduated magna cum laude</p>
@@ -141,10 +141,10 @@
 				</li>
 				<li>
 					<h2>Bachelor of Science: Engineering Technology</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>KU Leuven - Geel</p>
 						<p>Sep 2017 - Jun 2020</p>
-					</H3>
+					</h3>
 					<div>
 						<p>Specialization: Electronics and ICT engineering</p>
 						<p>Graduated magna cum laude</p>
@@ -152,10 +152,10 @@
 				</li>
 				<li>
 					<h2>High School: Industriële Wetenschappen</h2>
-					<H3 class="loc-date">
+					<h3 class="loc-date">
 						<p>TISP - Mol</p>
 						<p>Sep 2011 - Jun 2017</p>
-					</H3>
+					</h3>
 					<div>
 						<p>Final project: Inverse kinematics of a parallel delta robot</p>
 					</div>
@@ -301,19 +301,22 @@
 
 		<section>
 			<h1>Contact info</h1>
+			<p>
 			<address>
-				<p>brecht.ooms@hotmail.com</p>
+				<a href="mailto:brecht.ooms@hotmail.com">brecht.ooms@hotmail.com</a>
 			</address>
+			</p>
 		</section>
 
-		<section id="last-section">
-			<!-- Section to make it even ;) -->
+		<section>
+			<h1><a href="https://brainmade.org/"><img src="/img/brain-made-black.svg" alt="brainmade.org"></a></h1>
+			<p>This HTML Resume was made without the use of generative toosl like GPT</p>
 		</section>
 	</main>
 
 
 	<footer>
-		<p>Copyright &copy; <span id="copyright-year">2022</span>, Ing. Brecht Ooms</p>
+		<p>Copyright &copy; <span id="copyright-year">2024</span>, Ing. Brecht Ooms</p>
 	</footer>
 
 	<script src="/js/age-counter.js"></script>
